feat: update api dashboard url

--- a/📄 主页(播放列表|频道|话题)批量提取接口.md
+++ b/📄 主页(播放列表|频道|话题)批量提取接口.md
@@ -10,8 +10,8 @@
 
 | 参数        | 说明                                                                                |
 | ----------- | ----------------------------------------------------------------------------------- |
-| `userId`    | 在[开发者接口管理中心](https://h.aaaapp.cn/user/developer)获取                      |
-| `secretKey` | 在[开发者接口管理中心](https://h.aaaapp.cn/user/developer)获取                      |
+| `userId`    | 在[开发者接口管理中心](https://www.henghengmao.com/user/developer)获取              |
+| `secretKey` | 在[开发者接口管理中心](https://www.henghengmao.com/user/developer)获取              |
 | `url`       | 作者主页分享链接地址                                                                |
 | `cursor`    | 分页参数，获取第 1 页不传该参数，获取第 2 页传前一页请求结果里的 next_cursor 的数据 |
 
