--- a/📄 单个帖子(视频|图集|音乐)提取接口.md
+++ b/📄 单个帖子(视频|图集|音乐)提取接口.md
@@ -8,11 +8,11 @@
 
 ## 接口参数
 
-| 参数        | 说明                                                           |
-| ----------- | -------------------------------------------------------------- |
-| `userId`    | 在[开发者接口管理中心](https://h.aaaapp.cn/user/developer)获取 |
-| `secretKey` | 在[开发者接口管理中心](https://h.aaaapp.cn/user/developer)获取 |
-| `url`       | 帖子分享链接地址                                               |
+| 参数        | 说明                                                                   |
+| ----------- | ---------------------------------------------------------------------- |
+| `userId`    | 在[开发者接口管理中心](https://www.henghengmao.com/user/developer)获取 |
+| `secretKey` | 在[开发者接口管理中心](https://www.henghengmao.com/user/developer)获取 |
+| `url`       | 帖子分享链接地址                                                       |
 
 ## 请求成功的返回结果 🎉
 
