--- a/📄 主页(播放列表|频道|话题)批量提取接口.md
+++ b/📄 主页(播放列表|频道|话题)批量提取接口.md
@@ -1,6 +1,6 @@
 # 主页(播放列表/频道/Hashtag/话题)批量提取接口文档 📄
 
-> **📢 哼哼猫最近新增了一些 API，请前往 👉 [docs.henghengmao.com](https://docs.henghengmao.com/zh/developer) 查看最新版本接口文档。**
+> **📢 哼哼猫最近新增了一些 API，请前往 👉 [docs.henghengmao.com](https://docs.henghengmao.com/zh/developer/playlist-downloader-api) 查看最新版本接口文档。**
 
 该接口为主页(播放列表/频道/Hashtag/话题)批量提取接口，哼哼猫「主页批量提取」功能支持的平台，该接口都支持。
 
