feat: update notice style and anchor text across all docs

--- a/📄 单个帖子(视频|图集|音乐)提取接口.md
+++ b/📄 单个帖子(视频|图集|音乐)提取接口.md
@@ -1,6 +1,8 @@
 # 单个帖子(视频/图集/音乐)提取接口文档 📄
 
-> **📢 哼哼猫最近新增了一些 API，请前往 👉 [docs.henghengmao.com](https://docs.henghengmao.com/zh/developer/media-downloader-api) 查看最新版本接口文档。**
+> [!IMPORTANT]
+> ## 📢 哼哼猫最近新增了一些 API
+> 请前往 👉 **[哼哼猫文档中心](https://docs.henghengmao.com/zh/developer/media-downloader-api)** 查看最新版本接口文档。
 
 该接口为单个帖子(视频/图集/音乐等)提取接口，哼哼猫支持的平台(999+)，该接口都支持。
 
